# delta_generator_build

./: .gitignore  CMakeLists.txt  README.md  apply_patch.sh  sync.sh
cmake/: e2fsextract.cmake  e2fsprogs.cmake  erofs.cmake  erofs_extract.cmake  include.cmake  libchrome.cmake  libext4_utils.cmake  mkbootfs.cmake  protobuf.cmake  sparse_img_tools.cmake
src/abseil-cpp/: Android.bp  METADATA  generate_bp.py
src/avb/: Android.bp  avbtool.py
src/avb/libavb/: avb_cmdline.c  avb_crypto.c  avb_crypto.h  avb_rsa.c  avb_rsa.h  avb_util.h  avb_vbmeta_image.c
src/avb/libavb_cert/: avb_cert_validate.c
src/avb/rust/: Android.bp
src/avb/test/: avb_slot_verify_unittest.cc  avb_unittest_util.cc  avb_unittest_util.h  avbtool_unittest.cc
src/boringssl/: Android.bp  BORINGSSL_REVISION  BUILD.generated.bzl  BUILD.generated_tests.bzl  CMakeLists.txt  OWNERS  TEST_MAPPING  UPDATING.md  android-sources.cmake  eureka.mk  rules.mk  sources.bp  sources.mk  update-upstream.sh
src/boringssl/selftest/: boringssl_self_test.cpp
src/brotli/: Android.bp  METADATA
src/bsdiff/: Android.bp  OWNERS  bsdiff.cc  patch_writer.cc
src/bzip2/: Android.bp
src/core/bootstat/: Android.bp  README.md  boot_event_record_store.cpp  boot_event_record_store.h  bootstat.cpp
src/core/debuggerd/: Android.bp  OWNERS  crash_dump.cpp  debuggerd.cpp  debuggerd_test.cpp  protocol.h  tombstone_handler.cpp  tombstone_handler.h  util.cpp  util.h
src/core/fastboot/: OWNERS  README.md  fastboot.cpp  fastboot.h  fastboot_driver.cpp  fastboot_driver.h  fastboot_driver_interface.h  fastboot_driver_mock.h  fastboot_driver_test.cpp  fastboot_test.cpp  fastboot_test.h  super_flash_helper_test.cpp  task.cpp  usb_linux.cpp  util.cpp  util.h
src/core/fs_mgr/: Android.bp  README.overlayfs.md  fs_mgr.cpp  fs_mgr_overlayfs_control.cpp  fs_mgr_overlayfs_mount.cpp  fs_mgr_remount.cpp  userdata.alias.remove.rc  userdata_alias_remove.cpp
src/core/gatekeeperd/: Android.bp  gatekeeperd.cpp
src/core/healthd/: Android.bp  BatteryMonitor.cpp  BatteryMonitor_v1.cpp  TEST_MAPPING  battery_monitor_internal.h  battery_monitor_test.cpp
src/core/init/: Android.bp  README.md  README.ueventd.md  apex_init_util.cpp  apex_init_util.h  block_dev_initializer.cpp  block_dev_initializer.h  bootchart.cpp  builtins.cpp  capabilities.cpp  coldboot.cpp  coldboot.h  coldboot_runner.h  coldboot_runner_subprocess.cpp  coldboot_runner_thread_pool.cpp  devices.cpp  devices.h  devices_test.cpp  firmware_handler.cpp  firmware_handler.h  firmware_handler_test.cpp  first_stage_init.cpp  first_stage_mount.cpp  host_init_verifier.cpp  init.cpp  init_test.cpp  modalias_handler.cpp  modalias_handler.h  mount_namespace.cpp  persistent_properties.cpp  property_service.cpp  property_service_test.cpp  reboot.cpp  reboot.h  reboot_utils.cpp  rlimit_parser.cpp  security.cpp  security.h  selinux.cpp  service.cpp  (+23 more)
src/core/janitors/: OWNERS
src/core/libcutils/: ashmem-dev.cpp  ashmem-internal.h  ashmem_base_test.cpp  ashmem_test.cpp  fs_config.cpp  properties_test.cpp
src/core/libmodprobe/: Android.bp  libmodprobe.cpp  libmodprobe_ext.cpp  libmodprobe_ext_test.cpp  libmodprobe_test.cpp  module_config.cpp  module_config_ext.cpp  module_config_ext_test.cpp  module_config_test.cpp  module_config_test.h  module_dependency_graph.cpp  module_dependency_graph_test.cpp  utils.cpp
src/core/libprocessgroup/: processgroup.cpp  task_profiles.cpp  task_profiles.h
src/core/libsparse/: output_file.cpp  sparse.cpp
src/core/libstats/: OWNERS
src/core/libutils/: Android.bp  Looper.cpp  Looper_test.cpp  LruCache_fuzz.cpp  LruCache_test.cpp  TEST_MAPPING
src/e2fsextract/: extract.cc  extract.h  main.cc  process.cc  progress.cc  symlink.h  version.h.in
src/e2fsprogs/: METADATA  OWNERS  README.version
src/erofs-utils/: Android.bp  METADATA  OWNERS
src/erofs_extract/: ExtractHelper.cpp  ExtractOperation.cpp  main.cpp
src/fec/: Android.bp
src/fmtlib/: Android.bp  METADATA
src/gflags/: Android.bp
src/googletest/: Android.bp  METADATA  TEST_MAPPING
src/jsoncpp/: Android.bp  OWNERS  TEST_MAPPING
src/libbase/: Android.bp  file.cpp  logging.cpp  logging_splitters.h  logging_splitters_test.cpp  logging_test.cpp  mapped_file.cpp  mapped_file_test.cpp  properties_test.cpp  stringify_test.cpp  test_utils.cpp
src/libbrillo/: Android.bp  OWNERS
src/libchrome/: Android.bp  OWNERS
src/libdivsufsort/: METADATA  OWNERS
src/libevent/: Android.bp
src/libziparchive/: Android.bp  zip_archive.cc  zip_archive_private.h  zip_archive_test.cc  zip_cd_entry_map.cc  zip_cd_entry_map.h  zip_error.cpp
src/lz4/: METADATA
src/lzma/: Android.bp  METADATA  TEST_MAPPING
src/mkbootimg/: Android.bp  BUILD.bazel  pylintrc  repack_bootimg.py  unpack_bootimg.py
src/mman-win32/: mman.h  test.c
src/modp_b64/: Android.bp  OWNERS
src/pcre/: Android.bp  METADATA  post_update.sh
src/protobuf/: Android.bp  METADATA  OWNERS  vendor_suffix_test.cpp
src/puffin/: Android.bp  BUILD.gn  Makefile  OWNERS  PRESUBMIT.cfg
src/squashfs-tools/: OWNERS
src/update_engine/: README.md  download_action.cc  libcurl_http_fetcher.cc  libcurl_http_fetcher.h  main.cc  test_config.xml  test_http_server.cc  test_subprocess.cc  update_boot_flags_action.cc  update_status_utils.cc
src/xz-embedded/: Android.bp  METADATA
src/zlib/: Android.bp  METADATA  libz.map.txt  zconf.h  zlib.h
src/zstd/: Android.bp  METADATA
src/zucchini/: METADATA  OWNERS  abs32_utils.cc  abs32_utils.h  abs32_utils_unittest.cc  disassembler.cc  disassembler.h  disassembler_dex.cc  disassembler_ztf.cc  disassembler_ztf.h  element_detection.cc  element_detection.h  element_detection_unittest.cc  heuristic_ensemble_matcher.cc  image_utils.h  imposed_ensemble_matcher.cc  imposed_ensemble_matcher_unittest.cc  integration_test.cc  patch_reader.cc  patch_reader.h  patch_writer.h  rel32_utils.cc  rel32_utils.h  rel32_utils_unittest.cc  reloc_elf.cc  reloc_elf.h  reloc_elf_unittest.cc  reloc_win32.cc  reloc_win32.h  reloc_win32_unittest.cc  test_reference_reader.cc  test_reference_reader.h  zucchini_apply.cc
(+655 files in other folders)
